test/fail/inheritance/inherit_noexist.lily
#[
SyntaxError: Class 'invalid' does not exist.
    from inherit_noexist.lily:6:
]#

class abc < invalid {  }
